# gan

./: .gitignore  CITATION.cff  CONTRIBUTE.md  LICENSE  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yml  pypi-release.yml  test.yml
docs/: api.md  config.tex  documentation.html  documentation.md  environment.yaml  gan-genus.md  gan-init.md  gan-validate.md  genai.md  graphics.md  template.tex  tsv2xls.md  xls2tsv.md
input_real/: End_terms_biome_specific.xlsx  End_terms_general.xlsx  Table1_genera.xlsx  Table1_prefixes.xlsx  Table1_species.xlsx  Table2_sea_deities.xlsx  Table3_scientists.xlsx  Table4b_hosts_mammalian.xlsx  Table5_environments.xlsx  TableS4a_hosts_avian.xlsx  TableS4c_systems_avian.xlsx  TableS4d_systems_mammalian.xlsx  read_me_template_not_finished.xlsx
input_test/: Test_Table_S1A_prefixes.xlsx  Test_Table_S1B_species.xlsx  Test_Table_S1_output.xlsx  template.xlsx  test_input_animal_hosts_input.xlsx  test_input_animal_systems.xlsx  test_input_end-terms_biome-specific.xlsx  test_input_end-terms_universal.xlsx  test_input_genera.xlsx  test_input_genera_oct1_part1.xlsx  test_input_genera_oct1_part2.xlsx  test_input_genera_oct1_part3.xlsx  test_input_genera_part1.xlsx  test_input_genera_part2.xlsx  test_input_nymphs.xlsx  test_input_scientists.xlsx  test_inputs_environments.xlsx
output_examples/: generated_genera.html  generated_genera.json
paper/: .gitignore  paper.bib  paper.md
scripts/: __init__.py  combinator.py  gan-genus.py  gan-validate.py  gan.py  ganlib.py  generateGenus_1.py  html.template  latex.template  readExcel.py  wikidict.py
src/gan_nomenclature/: __init__.py  cli.py  genai_cli.py  generator.py  init_cli.py  io.py  tsv2xls.py  validate_cli.py  xls2tsv.py
src/gan_nomenclature/templates/: __init__.py  html.template  latex.template
test/: all.sh
tests/: README.md  abstract-output-ai.txt  abstract.txt  make_suppl.sh  table3.xlsx  test_cli.py  test_errors.py  test_generation.py  test_init_cli.py  test_integration.py  test_io.py  test_roots.py  test_tsv2xls.py  test_validate_cli.py  test_xls2tsv.py
