[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gan-nomenclature"
version = "0.1.0"
description = "Generate bacterial nomenclature Latin names using a combinatorial approach."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "GAN contributors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3",
    "openpyxl",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
"gan-genus" = "gan_nomenclature.cli:main"

[project.urls]
Homepage = "https://github.com/telatin/gan"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gan_nomenclature" = ["templates/*.template"]
