[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gan-nomenclature"
dynamic = ["version"]
description = "Generate bacterial nomenclature Latin names using a combinatorial approach, as decribed in Pallen et al. (2021) 'The Next Million Names for Archaea and Bacteria'"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Andrea Telatin" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3",
    "openpyxl",
    "requests>=2.31",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
"gan-genus" = "gan_nomenclature.cli:main"
"xls2tsv" = "gan_nomenclature.xls2tsv:main"
"gan-init" = "gan_nomenclature.init_cli:main"
"gan-ai" = "gan_nomenclature.genai_cli:main"
"gan-validate" = "gan_nomenclature.validate_cli:main"
"tsv2xls" = "gan_nomenclature.tsv2xls:main"

[project.urls]
Homepage = "https://github.com/telatin/gan"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gan_nomenclature" = ["templates/*.template"]

[tool.setuptools.dynamic]
version = { attr = "gan_nomenclature.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
